--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
 	<title>Mario Cash</title>
 </head>
 <body>
+<div class="modal modal-alert">
+	<div class="modal__inner">
+		<div class="alert-icon__wrapper">
+			<svg class="alert__icon">
+				<use href="./img/icons.svg#error"/>
+			</svg>
+		</div>
+		<h3 class="title alert__title">Произошла ошибка!</h3>
+		<p class="text alert__text">Попробуйте позже</p>
+	</div>
+</div>
+
 <header class="header">
 	<div class="header__inner">
 		<div class="container">
