--- a/account.html
+++ b/account.html
@@ -164,7 +164,9 @@
 <section class="dashboard">
     <div class="container">
         <div class="dashboard__inner">
-            <img class="dashboard__img" src="./img/account/img.png" alt="">
+            <div class="dashboard__img">
+                <img src="./img/account/img.png" alt="">
+            </div>
             <div class="dashboard__content">
                 <div class="dashboard__buttons">
                     <button class="button button_large dashboard__button">играть и зарабатывать</button>
@@ -207,8 +209,8 @@
             <div class="referral__content">
                 <h3 class="title referral__title">Реферальная ссылка</h3>
                 <div class="referral__text">
-                    <p class="referral__users">Игроков: 0</p>
-                    <p class="referral__money">Заработано: +0₽</p>
+                    <p>Игроков: 0</p>
+                    <p>Заработано: +0₽</p>
                 </div>
             </div>
             <div class="referral__link">
